Fix: nowrap doesn't play nicely with flex anymore, so removing for now.

--- a/cmd/tchaik/ui/css/bottom.css
+++ b/cmd/tchaik/ui/css/bottom.css
@@ -186,9 +186,6 @@ div#bottom {
         color: #999;
         line-height: 16px;
         padding: 4px;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow-x: hidden;
 
         &:hover {
           overflow-x: visible;
